--- a/index.css
+++ b/index.css
@@ -7,10 +7,12 @@
 .popoverWrapper {
     padding: 0;
     display: block;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 .popperClass {
-    margin-top: 50px;
-    margin-left: 330px;
+    margin-top: 100px;
     display: block;
     width: 100px;
 }
@@ -97,4 +99,8 @@
 
 .popperBody.right {
     padding-left: 14px;
+}
+
+.popperBody  .popperClass{
+    margin-top: 0;
 }
